--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 body {
     background-image: url('santa.webp');
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     background-color: rgb(225, 13, 13);
 }
